# pybpgviewer

./: LICENSE  README.md  bpgdec.c  bpgdec.c.diff  bpgviewer.py
bpgviewer-nautilus-thumbnailer/: bpgviewer-thumbnailer  bpgviewer-thumbnailer.schemas  bpgviewer.thumbnailer  install.sh  install.txt
kde4-bpg-thumbnailer/: CMakeLists.txt  build.txt
kde4-bpg-thumbnailer/src/: CMakeLists.txt  bpgthumbnailer.cc  bpgthumbnailer.desktop  bpgthumbnailer.h  libbpg.h
kde5-bpg-thumbnailer/: CMakeLists.txt  README.md  build.txt
kde5-bpg-thumbnailer/src/: bpg-thumbnailer.cc  bpg-thumbnailer.desktop  bpg-thumbnailer.h  bpgthumbnailer.cc
libbpgdec/: Makefile  Makefile.macos  libbpgdec.c  libbpgdec.h
macos-bpgviewer/: README.md  bpg.icns  bpgviewer.py  setup.py
macos-bpgviewer/bpg-ql/: Info.plist  README.md  bpg-ql.m  main.m
nautilus-bpg-thumbnailer-gdk/: Makefile  bpg-thumbnailer.c  bpg-thumbnailer.schemas  bpg.thumbnailer
tumbler-bpg-thumbnailer/: Makefile.am  README.md  bpg-thumbnailer.c
windows-bpg-thumbnailer/bpgdec.dll/: bpgdec.cc  bpgdec.h  build.txt
windows-bpg-thumbnailer/bpgthumbnailer.dll/: bpgthumbnailer.sln
windows-bpg-thumbnailer/bpgthumbnailer.dll/bpgthumbnailer/: base_resample.h  bpgdec.h  bpgthumbnailer.cpp  bpgthumbnailer.h  bpgthumbnailer.vcxproj  bpgthumbnailer.vcxproj.filters  dllmain.cpp  export.def
